--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/text_total"
         android:layout_marginBottom="20dp"
-        android.textStyle="bold"
+        android:textStyle="bold"
         android:textSize="32sp"/>
 
     <Button
